# cuda_cross_architecture

./: .gitignore  CMakeLists.txt  README.md  TargetArch.cmake
backend/: CMakeLists.txt
backend/include/: AllenTypeTraits.cuh  BackendCommon.h  BackendCommonInterface.h  CPUBackend.h  CUDABackend.h  HIPBackend.h
backend/src/: CPUBackend.cpp  CPUID.cpp  HalfType.cpp
cmake/: FindFilesystem.cmake  FindTBB.cmake  FindZMQ.cmake  GenerateConfiguration.cmake  TargetArch.cmake
cmake/utils/: cuda_arch.cu
src/: Test.cu  Test.cuh  kernel.cu  kernel.h  main.cpp  matrixmul.cu  matrixmul.h
